Added LGPL v3 license.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@6 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
         of Java applications on virtualized hardware, initially focusing on Amazon EC2.
     </description>
 
+    <licenses>
+        <license>
+            <name>GNU Lesser General Public License 3</name>
+            <url>LICENSE.txt</url>
+        </license>
+    </licenses>
+
     <scm>
         <connection>scm:svn:svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trun</connection>
         <developerConnection>scm:svn:svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trun</developerConnection>
