--- a/amazon-ec2-platform/pom.xml
+++ b/amazon-ec2-platform/pom.xml
@@ -8,14 +8,11 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>amazon-ec2-platform</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>Elastic Grid (EC2 Platform)</name>
+    <name>EC2 Platform</name>
     <prerequisites>
         <maven>2.0.8</maven>
     </prerequisites>
-    <inceptionYear>2008</inceptionYear>
-    <url>http://ww.elastic-grid.com</url>
 
     <dependencies>
         <!-- Substrates dependencies -->
