Improved DSL parsing by dynamically loading substrates custom DSL parsing.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@10 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/elastic-grid-core/pom.xml
+++ b/modules/elastic-grid-core/pom.xml
@@ -20,6 +20,13 @@
             <version>${pom.version}</version>
         </dependency>
 
+        <!-- Elastic Grid Substrates API -->
+        <dependency>
+            <groupId>com.elasticgrid.substrates</groupId>
+            <artifactId>substrate-api</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+
         <!-- Jini dependencies -->
         <dependency>
             <groupId>net.jini</groupId>
