Added GlassFish 2 Substrate.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@15 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/substrates/pom.xml
+++ b/substrates/pom.xml
@@ -15,8 +15,9 @@
     <modules>
         <module>substrate-api</module>
         <module>mysql</module>
-		<module>tomcat5</module>
+	<module>tomcat5</module>
         <module>tomcat6</module>
+        <module>glassfish2</module>
     </modules>
 
     <dependencies>
