Added GlassFish 2 Substrate.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@16 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/amazon-ec2-platform/pom.xml
+++ b/amazon-ec2-platform/pom.xml
@@ -31,6 +31,11 @@
 			<artifactId>substrate-tomcat6</artifactId>
 			<version>${pom.version}</version>
 		</dependency>
+        <dependency>
+			<groupId>com.elasticgrid.substrates</groupId>
+			<artifactId>substrate-glassfish2</artifactId>
+			<version>${pom.version}</version>
+		</dependency>
 
         <!-- Framework dependencies -->
 		<dependency>
