Huge rewrital of the CPAL (Cloud Platform Agnostic Layer).
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@22 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/amazon-ec2-provisioner/pom.xml
+++ b/modules/amazon-ec2-provisioner/pom.xml
@@ -14,11 +14,18 @@
 
     <dependencies>
 
+        <!-- Elastic Grid model -->
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>elastic-grid-model</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+
         <!-- Amazon EC2 dependencies -->
         <dependency>
             <groupId>com.xerox.amazonws</groupId>
             <artifactId>typica</artifactId>
-            <version>1.1</version>
+            <version>1.3</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
