--- a/modules/elastic-grid-cli/pom.xml
+++ b/modules/elastic-grid-cli/pom.xml
@@ -9,7 +9,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>elastic-grid-cli</artifactId>
     <packaging>jar</packaging>
-    <name>Elastic Grid CLI</name>
+    <name>Modules :: Elastic Grid CLI</name>
 
     <dependencies>
 
