--- a/modules/elastic-grid-manager/pom.xml
+++ b/modules/elastic-grid-manager/pom.xml
@@ -9,14 +9,14 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>elastic-grid-manager</artifactId>
     <packaging>jar</packaging>
-    <name>Elastic Grid Manager</name>
+    <name>Modules :: Elastic Grid Manager</name>
 
     <dependencies>
 
         <!-- Elastic Grid model -->
         <dependency>
             <groupId>${pom.groupId}</groupId>
-            <artifactId>elastic-grid-repository</artifactId>
+            <artifactId>elastic-grid-model</artifactId>
             <version>${pom.version}</version>
         </dependency>
 
