--- a/amazon-ec2-platform/pom.xml
+++ b/amazon-ec2-platform/pom.xml
@@ -64,7 +64,12 @@
 			<groupId>${pom.groupId}</groupId>
 			<artifactId>elastic-grid-utils</artifactId>
 			<version>${pom.version}</version>
-		</dependency>        
+		</dependency>
+        <dependency>
+			<groupId>${pom.groupId}</groupId>
+			<artifactId>elastic-grid-cli</artifactId>
+			<version>${pom.version}</version>
+		</dependency>
 
         <dependency>
             <groupId>org.testng</groupId>
