Initial work on an Apache 2 substrate.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@38 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/substrates/pom.xml
+++ b/substrates/pom.xml
@@ -18,6 +18,7 @@
 	<module>tomcat5</module>
         <module>tomcat6</module>
         <module>glassfish2</module>
+	<module>apache</module>
     </modules>
 
     <dependencies>
