Clean up code from Fingbugs, CPD and PMD errors.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@42 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/amazon-sqs/pom.xml
+++ b/modules/amazon-sqs/pom.xml
@@ -12,6 +12,12 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>elastic-grid-utils</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+
         <!-- Amazon EC2 dependencies -->
         <dependency>
             <groupId>com.xerox.amazonws</groupId>
