--- a/modules/amazon-ec2-bootstrapper/pom.xml
+++ b/modules/amazon-ec2-bootstrapper/pom.xml
@@ -77,4 +77,18 @@
         </plugins>
     </build>
 
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
+                <configuration>
+                    <threshold>Normal</threshold>
+                    <effort>Max</effort>
+                    <excludeFilterFile>src/main/conf/findbugs-exclude.xml</excludeFilterFile>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
+
 </project>
