Added initial support for Amazon SimpleDB.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@45 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -24,6 +24,7 @@
         <module>elastic-grid-core</module>
         <module>elastic-grid-cli</module>
         <module>amazon-sqs</module>
+        <module>amazon-sdb</module>
         <module>amazon-ec2-bootstrapper</module>
         <module>amazon-ec2-provisioner</module>
         <!--module>elastic-grid-oar</module-->
