Huge simplifications in the AMI build process.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@49 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/amazon-ec2-platform/pom.xml
+++ b/amazon-ec2-platform/pom.xml
@@ -89,7 +89,7 @@
                     <descriptors>
                         <descriptor>assembly.xml</descriptor>
                     </descriptors>
-                    <finalName>eg-${pom.version}</finalName>
+                    <finalName>elastic-grid-${pom.version}</finalName>
                 </configuration>
 				<executions>
 					<execution>
