Improved monitor node detection within a specificied grid.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@56 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/amazon-ec2-bootstrapper/pom.xml
+++ b/modules/amazon-ec2-bootstrapper/pom.xml
@@ -19,11 +19,24 @@
             <version>${pom.version}</version>
         </dependency>
 
+        <!-- Spring dependencies -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring</artifactId>
+            <version>2.5.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>2.5.5</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Amazon EC2 dependencies -->
         <dependency>
             <groupId>com.xerox.amazonws</groupId>
             <artifactId>typica</artifactId>
-            <version>1.3</version>
+            <version>1.5</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
