Removed examples from the build process.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@63 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
         <module>modules</module>
         <module>amazon-ec2-platform</module>
         <module>substrates</module>
-        <module>examples</module>
+        <!--<module>examples</module>-->
     </modules>
 
     <distributionManagement>
