Turned off integration test.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@69 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/amazon-sdb/pom.xml
+++ b/modules/amazon-sdb/pom.xml
@@ -87,6 +87,9 @@
                 <version>2.4.1</version>
                 <configuration>
                     <forkMode>never</forkMode>
+                    <excludes>
+                        <exclude>**/SimpleDBTest.java</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
             <plugin>
