--- a/examples/video-conversion/pom.xml
+++ b/examples/video-conversion/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.elasticgrid.examples</groupId>
         <artifactId>examples</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.8</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.elasticgrid.examples.video</groupId>
