--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -4,12 +4,11 @@
     <parent>
         <groupId>com.elasticgrid</groupId>
         <artifactId>elastic-grid</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.8</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.elasticgrid</groupId>
     <artifactId>elastic-grid-modules</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Modules</name>
     <prerequisites>
