EG-40: changed package name for declared fault detection handler
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@75 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/amazon-ec2-platform/config/cybernode-cybernode.config
+++ b/amazon-ec2-platform/config/cybernode-cybernode.config
@@ -47,7 +47,7 @@ org.rioproject.cybernode {
 
 
     /* Configure a FaultDetectionHandler for the Cybernode */
-    fdh = "org.rioproject.resources.client.HeartbeatFaultDetectionHandler";
+    fdh = "org.rioproject.fdh.HeartbeatFaultDetectionHandler";
     /* Point to this configuration file */
     configFile = "${RIO_HOME}/config/cybernode.config";
     faultDetectionHandler =
@@ -57,7 +57,7 @@ org.rioproject.cybernode {
 /* --------------------------------------------------------------------------
  * Declare HeartbeatFaultDetectionHandler properties
  * --------------------------------------------------------------------------*/
-org.rioproject.resources.client.HeartbeatFaultDetectionHandler {
+org.rioproject.fdh.HeartbeatFaultDetectionHandler {
     heartbeatPeriod=10000;
     heartbeatGracePeriod=10000;
 }
