--- a/amazon-ec2-platform/config/monitor-cybernode.config
+++ b/amazon-ec2-platform/config/monitor-cybernode.config
@@ -47,7 +47,7 @@ org.rioproject.cybernode {
 
 
     /* Configure a FaultDetectionHandler for the Cybernode */
-    fdh = "org.rioproject.resources.client.HeartbeatFaultDetectionHandler";
+    fdh = "org.rioproject.fdh.HeartbeatFaultDetectionHandler";
     /* Point to this configuration file */
     configFile = "${RIO_HOME}/config/cybernode.config";
     faultDetectionHandler =
@@ -57,7 +57,7 @@ org.rioproject.cybernode {
 /* --------------------------------------------------------------------------
  * Declare HeartbeatFaultDetectionHandler properties
  * --------------------------------------------------------------------------*/
-org.rioproject.resources.client.HeartbeatFaultDetectionHandler {
+org.rioproject.fdh.HeartbeatFaultDetectionHandler {
     heartbeatPeriod=10000;
     heartbeatGracePeriod=10000;
 }
