--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
 
     <modules>
         <module>modules</module>
+        <module>private-lan-platform</module>
         <module>amazon-ec2-platform</module>
         <module>substrates</module>
         <!--<module>examples</module>-->
