--- a/examples/video-conversion/converter/pom.xml
+++ b/examples/video-conversion/converter/pom.xml
@@ -76,12 +76,15 @@
                 <configuration>
                     <forkMode>never</forkMode>
                     <excludedGroups>qa</excludedGroups>
+                    <excludes>
+                        <exclude>**/VideoConverterJSBTest*</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-rio-plugin</artifactId>
-                <version>3.3-m1</version>
+                <version>4.0-M1</version>
                 <extensions>true</extensions>
                 <configuration>
                     <environment>
