--- a/examples/video-conversion/oar/pom.xml
+++ b/examples/video-conversion/oar/pom.xml
@@ -4,7 +4,7 @@
     <parent>
 	    <groupId>com.elasticgrid.examples.video</groupId>
 	    <artifactId>video-conversion</artifactId>
-	    <version>0.8</version>
+	    <version>0.8.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>video-conversion-oar</artifactId>
@@ -42,7 +42,8 @@
                         <rio.home>${env.RIO_HOME}</rio.home>
                         <jini.home>${env.JINI_HOME}</jini.home>
                     </environment>
-                    <opstring>${basedir}/src/main/conf/video-conversion.xml</opstring>
+                    <opstring>${basedir}/src/main/conf/videoConversionS3WithTomcat.groovy</opstring>
+                    <!--<opstring>${basedir}/src/main/conf/video-conversion.xml</opstring>-->
                     <!--<opstring-test>${basedir}/src/test/conf/opstring-test-insufficiant-cpu.xml</opstring-test>-->
                 </configuration>
             </plugin>
