--- a/modules/amazon-ec2-provisioner/pom.xml
+++ b/modules/amazon-ec2-provisioner/pom.xml
@@ -4,7 +4,7 @@
     <parent>
     	<groupId>com.elasticgrid</groupId>
 	    <artifactId>elastic-grid-modules</artifactId>
-	    <version>0.8.1</version>
+	    <version>0.8.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>amazon-ec2-provisioner</artifactId>
@@ -139,16 +139,16 @@
                     <implementationTopclasses>
                         <implementationTopclass>com.elasticgrid.monitor.EC2ProvisionMonitorImpl</implementationTopclass>
                         <implementationTopclass>com.elasticgrid.amazon.ec2.core.EC2SmallInstanceCostModel</implementationTopclass>
-                        <implementationTopclass>com.elasticgrid.amazon.ec2.qos.EC2ScalingPolicyHandler</implementationTopclass>
+                        <implementationTopclass>com.elasticgrid.amazon.ec2.sla.EC2ScalingPolicyHandler</implementationTopclass>
                     </implementationTopclasses>
 
                     <clientIns>
                         <clientIn>com.elasticgrid.monitor</clientIn>
-                        <clientIn>com.elasticgrid.amazon.qos</clientIn>
+                        <clientIn>com.elasticgrid.amazon.sla</clientIn>
                     </clientIns>
                     <clientTopclasses>
                         <clientTopclass>com.elasticgrid.monitor.EC2ProvisionMonitor</clientTopclass>
-                        <clientTopclass>com.elasticgrid.amazon.ec2.qos.EC2ScalingPolicyHandler</clientTopclass>
+                        <clientTopclass>com.elasticgrid.amazon.ec2.sla.EC2ScalingPolicyHandler</clientTopclass>
                     </clientTopclasses>
 
                     <downloadableIns>
