--- a/private-lan-platform/pom.xml
+++ b/private-lan-platform/pom.xml
@@ -16,26 +16,26 @@
 
     <dependencies>
         <!-- Substrates dependencies -->
-		<dependency>
-			<groupId>com.elasticgrid.substrates</groupId>
-			<artifactId>substrate-mysql</artifactId>
-			<version>${pom.version}</version>
-		</dependency>
-        <dependency>
-			<groupId>com.elasticgrid.substrates</groupId>
-			<artifactId>substrate-tomcat5</artifactId>
-			<version>${pom.version}</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.elasticgrid.substrates</groupId>-->
+			<!--<artifactId>substrate-mysql</artifactId>-->
+			<!--<version>${pom.version}</version>-->
+		<!--</dependency>-->
+        <!--<dependency>-->
+			<!--<groupId>com.elasticgrid.substrates</groupId>-->
+			<!--<artifactId>substrate-tomcat5</artifactId>-->
+			<!--<version>${pom.version}</version>-->
+		<!--</dependency>-->
         <dependency>
 			<groupId>com.elasticgrid.substrates</groupId>
 			<artifactId>substrate-tomcat6</artifactId>
 			<version>${pom.version}</version>
 		</dependency>
-        <dependency>
-			<groupId>com.elasticgrid.substrates</groupId>
-			<artifactId>substrate-glassfish2</artifactId>
-			<version>${pom.version}</version>
-		</dependency>
+        <!--<dependency>-->
+			<!--<groupId>com.elasticgrid.substrates</groupId>-->
+			<!--<artifactId>substrate-glassfish2</artifactId>-->
+			<!--<version>${pom.version}</version>-->
+		<!--</dependency>-->
 
         <!-- Framework dependencies -->
 		<dependency>
