Initial draft of the UI.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@100 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -21,6 +21,7 @@
         <!--module>elastic-grid-repository</module-->
         <module>elastic-grid-manager</module>
         <module>elastic-grid-core</module>
+        <module>elastic-grid-ui</module>
         <module>elastic-grid-cli</module>
         <module>amazon-sqs</module>
         <module>amazon-sdb</module>
