Simplified sources layout.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@108 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -164,15 +164,10 @@
                         <include>**/test/**</include>
                     </includes>
                     <excludes>
-                        <exclude>target/**</exclude>
+                        <exclude>**/target/**</exclude>
                         <exclude>.clover/**</exclude>
                     </excludes>
                     <useDefaultExcludes>true</useDefaultExcludes>
-                    <mapping>
-                        <jwc>xml</jwc>
-                        <application>xml</application>
-                        <myFileExtension>java</myFileExtension>
-                    </mapping>
                     <useDefaultMapping>true</useDefaultMapping>
                     <properties>
                         <year>${project.inceptionYear}</year>
