Maven build enhanced to fail fast if the Rio home directory is not set properly.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@109 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/amazon-ec2-platform/pom.xml
+++ b/amazon-ec2-platform/pom.xml
@@ -102,6 +102,29 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>enforce-property</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireProperty>
+                                    <property>rio.home</property>
+                                    <message>
+                                        You must set a property 'rio.home' to a working Rio installation! This can be done by doing mvn -Drio.home=...
+                                    </message>
+                                </requireProperty>
+                            </rules>
+                            <fail>true</fail>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <source>1.5</source>
