Moved platforms into a dedicated directory.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@117 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -30,7 +30,7 @@
         <!--module>elastic-grid-oar</module-->
         <!--module>examples</module-->
         <!--<module>jabber-cli</module>-->
-        <module>jxta-discovery</module>
+        <!--module>jxta-discovery</module-->
     </modules>
 
     <reporting>
