Who said Grid? Cluster dumb! :-)
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@118 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/amazon-ec2-provisioner/pom.xml
+++ b/modules/amazon-ec2-provisioner/pom.xml
@@ -14,7 +14,7 @@
 
     <dependencies>
 
-        <!-- Elastic Grid manager -->
+        <!-- Elastic Cluster manager -->
         <dependency>
             <groupId>${pom.groupId}</groupId>
             <artifactId>elastic-grid-manager</artifactId>
