--- a/modules/elastic-grid-model/pom.xml
+++ b/modules/elastic-grid-model/pom.xml
@@ -13,7 +13,7 @@
 
     <dependencies>
 
-        <!-- Elastic Grid Utilities -->
+        <!-- Elastic Cluster Utilities -->
         <dependency>
             <groupId>${pom.groupId}</groupId>
             <artifactId>elastic-grid-utils</artifactId>
