First REST resource exposing the list of clusters.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@119 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/modules/elastic-grid-model/pom.xml
+++ b/modules/elastic-grid-model/pom.xml
@@ -82,6 +82,10 @@
                 <version>1.1.6a</version>
                 <configuration>
                     <directory>src/main/conf</directory>
+                    <includes>
+                        <include>binding.xml</include>
+                        <include>binding-REST.xml</include>
+                    </includes>
                     <load>true</load>
                     <validate>true</validate>
                     <verbose>true</verbose>
