--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
         <module>modules</module>
         <module>substrates</module>
         <module>examples</module>
+		<module>applications</module>
 		<module>platforms</module>
     </modules>
 
