--- a/applications/rest-api/pom.xml
+++ b/applications/rest-api/pom.xml
@@ -37,6 +37,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.restlet</groupId>
+            <artifactId>org.restlet.ext.wadl</artifactId>
+            <version>1.1-SNAPSHOT</version>
+        </dependency>
 
         <!-- JiBX dependencies -->
         <dependency>
