--- a/modules/elastic-grid-model/pom.xml
+++ b/modules/elastic-grid-model/pom.xml
@@ -25,6 +25,13 @@
             <version>1.1.6a</version>
         </dependency>
 
+        <!-- Various dependencies -->
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.3</version>
+        </dependency>
+
         <dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>rio</artifactId>
