--- a/modules/amazon-ec2-provisioner/pom.xml
+++ b/modules/amazon-ec2-provisioner/pom.xml
@@ -21,6 +21,13 @@
             <version>${pom.version}</version>
         </dependency>
 
+        <!-- Elastic Grid Utils -->
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>elastic-grid-utils</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+
         <!-- Amazon EC2 dependencies -->
         <dependency>
             <groupId>com.xerox.amazonws</groupId>
@@ -57,7 +64,7 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- Rio 3.3 dependencies -->
+        <!-- Rio 4.0 dependencies -->
         <dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>rio</artifactId>
