--- a/applications/rest-api/pom.xml
+++ b/applications/rest-api/pom.xml
@@ -42,6 +42,11 @@
             <artifactId>org.restlet.ext.wadl</artifactId>
             <version>1.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>xalan</groupId>
+            <artifactId>xalan</artifactId>
+            <version>2.7.1</version>
+        </dependency>
 
         <!-- JiBX dependencies -->
         <dependency>
