Added more REST Resources. Improved a lot the REST API documentation.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@127 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/applications/rest-api/pom.xml
+++ b/applications/rest-api/pom.xml
@@ -27,6 +27,11 @@
             <version>1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>com.noelios.restlet</groupId>
+            <artifactId>com.noelios.restlet.ext.jetty</artifactId>
+            <version>1.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.restlet</groupId>
             <artifactId>org.restlet.ext.jibx</artifactId>
             <version>1.1-SNAPSHOT</version>
