--- a/applications/rest-api/src/main/resources/log4j.properties
+++ b/applications/rest-api/src/main/resources/log4j.properties
@@ -28,3 +28,5 @@ log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
 
 log4j.logger.com.elasticgrid=DEBUG
+log4j.logger.com.noelios=DEBUG
+log4j.logger.org.restlet=DEBUG
