--- a/applications/rest-api/pom.xml
+++ b/applications/rest-api/pom.xml
@@ -73,8 +73,12 @@
 			<groupId>cglib</groupId>
 			<artifactId>cglib</artifactId>
 			<version>2.1_3</version>
-			<!--<type>jar</type>-->
 		</dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
+            <version>1.5.3</version>
+        </dependency>
 
         <!-- Spring dependencies -->
         <dependency>
