--- a/applications/rest-api/pom.xml
+++ b/applications/rest-api/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>rest-api</artifactId>
-    <packaging>jar</packaging>
+    <packaging>jsb</packaging>
     <name>Applications :: REST API</name>
 
     <dependencies>
@@ -122,9 +122,47 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
+                <artifactId>maven-rio-plugin</artifactId>
+                <version>4.0-M1</version>
+                <extensions>true</extensions>
                 <configuration>
-                    <archiveClasses>true</archiveClasses>
+                    <environment>
+                        <rio.home>${env.RIO_HOME}</rio.home>
+                        <jini.home>${env.JINI_HOME}</jini.home>
+                    </environment>
+
+                    <implementationIns>
+                        <implementationIn>com.elasticgrid.rest</implementationIn>
+                        <implementationIn>org.restlet</implementationIn>
+                        <implementationIn>org.restlet.ext.spring</implementationIn>
+                        <implementationIn>org.restlet.ext.jibx</implementationIn>
+                        <implementationIn>com.noelios.restlet</implementationIn>
+                        <implementationIn>com.noelios.restlet.ext.jetty</implementationIn>
+                    </implementationIns>
+                    <implementationTopclasses>
+                        <implementationTopclass>com.elasticgrid.rest.RestJSB</implementationTopclass>
+                        <implementationTopclass>com.elasticgrid.rest.RestApplication</implementationTopclass>
+                        <implementationTopclass>com.elasticgrid.rest.ClustersResource</implementationTopclass>
+                        <implementationTopclass>com.elasticgrid.rest.ClusterResource</implementationTopclass>
+                        <implementationTopclass>com.elasticgrid.rest.ApplicationsResource</implementationTopclass>
+                        <implementationTopclass>com.elasticgrid.rest.ApplicationResource</implementationTopclass>
+                        <implementationTopclass>com.elasticgrid.rest.ServicesResource</implementationTopclass>
+                        <implementationTopclass>com.elasticgrid.rest.ServiceResource</implementationTopclass>
+                    </implementationTopclasses>
+
+                    <clientIns>
+                        <clientIn>org.restlet</clientIn>
+                    </clientIns>
+                    <clientTopclasses>
+                        <clientTopclass>org.restlet.Client</clientTopclass>
+                    </clientTopclasses>
+
+                    <!--<downloadableIns>-->
+                        <!--<downloadableIn>com.elasticgrid.rest</downloadableIn>-->
+                    <!--</downloadableIns>-->
+                    <!--<downloadableTopclasses>-->
+                        <!--<downloadableTopclass>com.elasticgrid.rest.RestProxy</downloadableTopclass>-->
+                    <!--</downloadableTopclasses>-->
                 </configuration>
             </plugin>
             <plugin>
